--- a/mathematical_analysis/Подпоследовательности.md
+++ b/mathematical_analysis/Подпоследовательности.md
@@ -65,3 +65,9 @@
 Если $\set{x_{n}}$ ограничена, то у $\set{x_{n}}$ имеется сходящаяся подпоследовательность, то есть $\exists$ СВП $\set{n_{k}}: \set{n_{k}}$ сходится
 
 - *В авторском конспекте...*
+
+### Критерий Коши
+Последовательность $\set{x_{n}}$ называется **фундаментальной**, если $\forall \varepsilon > 0 \enspace \exists N \enspace \forall n, m > N \enspace |x_{n} - x_{m}| < \varepsilon$
+
+#### Теорема
+$\set{x_{n}}$ сходится $\Leftrightarrow \set{x_{n}}$ фундаментальна
