test latex script

--- a/mathematical_analysis/Предел функции.md
+++ b/mathematical_analysis/Предел функции.md
@@ -1,3 +1,8 @@
+<script
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+  type="text/javascript">
+</script>
+
 # Предел функции
 
 Пусть на $D \subset \mathbb{R}$  задана функция $f: D \to \mathbb{R}$
