--- a/discrete_mathematics/Группы.md
+++ b/discrete_mathematics/Группы.md
@@ -62,4 +62,75 @@ $\exists! q, r \in \mathbb{Z}, \enspace o \leq r < |b|: a = b \times q + r$
 
 #### Сравнимость по модулю
 $a \equiv b \space (\negthickspace \negthickspace \mod m), \enspace a \equiv_{m} b$  
-$a$ сравнимо с $b$ по модулю $m$
+$a$ сравнимо с $b$ по модулю $m$, если $\exists t \in \mathbb{Z}: a - b = m \times t$
+
+#### Отношение эквивалентности
+$\equiv_{m}$ - отношение эквивалентности на $\mathbb{Z}$
+1. *рефлексивность:* $x \equiv_{m} x$
+2. *симметричность:* $x \equiv_{m} y \Rightarrow y \equiv_{m} x$
+3. *транзитивность:* $x \equiv_{m} y, \enspace y \equiv_{m} x \Rightarrow x \equiv_{m} z$
+
+### Мультипликативная запись
+##### $G = <M, \times>$
+1. $\forall a, b, c, \in G \enspace a \times (b \times c) = (a \times b) \times c$
+2. $\exists! e \in G \enspace \forall a \in G \enspace a \times e = e \times a = a$
+3. $\forall a \in G \enspace \exists! b \in G: a \times b = b \times a = e$
+
+### Аддитивная запись
+##### $G = <M, +>$
+1. $\forall a, b, c, \in G \enspace a + (b + c) = (a + b) + c$
+2. $\exists! z \in G \enspace \forall a \in G \enspace a + z = z + a = a$
+3. $\forall a \in G \enspace \exists! b \in G: a + b = b + a = z$
+
+### Порядок группы
+**Порядок (конечной) группы $G = <M, \circ>$** - количество элементов в $M$  
+*Обозначается* $|G|$
+
+### Изоморфизм
+$G = <M, \circ>$ изоморфна $G' = <M', *>$, если существует биекция $\varphi: G \leftrightarrow G':$
+- $a \in M, \varphi(a) = a', a' \in M'$
+- $\varphi(a \circ b) = \varphi(a) * \varphi(b)$
+
+### Циклическая группа
+Группа $G$ называется **циклической**, если $\exists a \in G: \forall b \in G \enspace \exists k \in \mathbb{Z}: b = a^{k}$
+
+## Cтроим группы
+##### $G = <\set{e, a}, \circ>$
+$\circ: M \times M \to M$  
+
+| $\circ$ | e   | a   |
+| :------ | :-- | :-- |
+| **e**   | e   | a   |
+| **a**   | a   | e   |
+_**Таблица Кэли**_
+- Все элементы строк различны
+
+##### $G = <\set{e, a, b}, \circ>$ - изоморфна $<\mathbb{Z}_{3}, +>$
+
+| $\circ$ | e   | a   | b   |
+| :------ | :-- | :-- | --- |
+| **e**   | e   | a   | b   |
+| **a**   | a   | b   | e   |
+| **b**   | b   | e   | a   |
+
+##### $G = <\set{e, a, b, c}, \circ>$
+
+| $\circ$ | e   | a   | b   | c   |
+| :------ | :-- | :-- | --- | --- |
+| **e**   | e   | a   | b   | c   |
+| **a**   | a   | <u>b</u>   | c   | e   |
+| **b**   | b   | c   | e   | a   |
+| **c**   | c   | e   | a   | b   |
+###### Предположения
+1. $a \circ a \ne e (= b)$
+    - Получилось $<\mathbb{Z}_{4}, +>$
+
+| $\circ$ | e   | a        | b   | c   |
+| :------ | :-- | :------- | --- | --- |
+| **e**   | *e* | a        | b   | c   |
+| **a**   | a   | <u>e</u> | c   | b   |
+| **b**   | b   | c        | *e* | a   |
+| **c**   | c   | b        | a   | *e* |
+###### Предположения
+1. $a \circ a = e$
+    - Получилось $<\set{00, 01, 10, 11}, XOR>$
