--- a/mathematical_analysis/Отображения и счетность множеств.md
+++ b/mathematical_analysis/Отображения и счетность множеств.md
@@ -112,6 +112,9 @@ $\forall n \in \mathbb{N} \enspace I_{n} := \set{k \in \mathbb{N} \enspace \vert
 Если $\exists n \in \mathbb{N}$ и существует биекция $f: I_{n} \to A$, то $A$ называется **конечным** ($A = \varnothing$ - тоже конечное)  
 Если множество $A$ не является конечным, то оно называется **бесконечным**
 
+### Бесконечное множество (по Дедекинду)
+Множество $X$ называется бесконечным, если $\exists Y \subset X, Y \ne X: Y$ равномощно $X$
+
 #### Утверждение
 *$\mathbb{N}$ - бесконечное множество*
 
