week 6 - till wednesday

--- a/algorithms/Сортировки.md
+++ b/algorithms/Сортировки.md
@@ -1,4 +1,4 @@
-# Сортировки
+qqqqqqqq# Сортировки
 
 Это поиск такой $\sigma \in S_{n}$, что $a_{\sigma(1)} \leq a_{\sigma(2)} \leq \textellipsis \leq a_{\sigma(n)}$
 
@@ -84,10 +84,8 @@ for (int i = n / 2; i >= 0; i--) {
 
 ```java
 while (l < r) {
-    while (a[l] < pivot || a[r] > pivot) {
-        if (a[l] < pivot) l++;
-        if (a[r] > pivot) r++;
-    }
+    while (a[l] < pivot) l++;
+    while (a[r] > pivot) r--;
 
     swap(a[l], a[r]);
     l++;
