--- a/mathematical_analysis/Предел функции.md
+++ b/mathematical_analysis/Предел функции.md
@@ -75,3 +75,26 @@ $I \subset R$ называется промежутком, если $\forall u, 
 
 #### Теорема
 Если $f$ непрерывна на $[a, b]$, то $\exists x \in [a, b]: f(x) = \sup f([a, b])$
+
+##### Лемма
+$\forall x \in \left(0, \frac{\pi}{2}\right) \enspace \sin x < x < \tan x$
+
+#### Первый замечательный предел
+$\lim\limits_{x \to 0} \frac{\sin x}{x} = 1$
+- Пусть $x \in \left(0, \frac{\pi}{2}\right)$
+- $\sin x < x < \frac{\sin x}{\cos x} \Rightarrow \sin x > x \cos x$
+- $x \cos x < \sin x < x$
+- $\cos x < \frac{\sin x}{x} < 1$
+    - $\lim\limits_{x \to 0} \cos x = \cos 0 = 1$, $\cos$ непрерывна
+- $\Rightarrow \lim\limits_{x \to 0} \frac{\sin x}{x} = 1$
+
+#### Теорема об обратной функции
+Пусть $I \in \mathbb{R}$ - промежуток, $f: I \to \mathbb{R}$ строго возрастает и <u>непрерывна</u>  
+Тогда $J = f(I)$ - тоже промежуток, $f$ строго возрастает и непрерывна на $J$
+- Пусть $x, y \in I, \enspace u = f(x), v = f(y)$
+    - $x \ne y \Leftrightarrow n \ne v$
+- Пусть $u < v \Rightarrow x < y$
+    - $\Rightarrow f^{-1}$ строго возрастает
+- $y = f(I)$ - тоже промежуток (по теореме о промежуточном значении)
+- тогда $f^{-1}(J) = I$ - промежуток
+- $\Rightarrow f^{-1}$ непрерывна на $J$
