--- a/algorithms/Сортировки.md
+++ b/algorithms/Сортировки.md
@@ -1,4 +1,4 @@
-qqqqqqqq# Сортировки
+# Сортировки
 
 Это поиск такой $\sigma \in S_{n}$, что $a_{\sigma(1)} \leq a_{\sigma(2)} \leq \textellipsis \leq a_{\sigma(n)}$
 
@@ -171,6 +171,10 @@ public static void radixSort(int[] array) {
     int newStartIndex = 0;
     while (array[newStartIndex] >= 0) {
         newStartIndex++;
+
+        if (newStartIndex == array.length) {
+            return;
+        }
     }
 
     cyclicShift(array, array.length - newStartIndex);
