--- a/discrete_mathematics/Группы.md
+++ b/discrete_mathematics/Группы.md
@@ -86,14 +86,25 @@ $\equiv_{m}$ - отношение эквивалентности на $\mathbb{Z
 **Порядок (конечной) группы $G = <M, \circ>$** - количество элементов в $M$  
 *Обозначается* $|G|$
 
+#### Порядок элемента
+...$a$ в группе $G$ - наименьшее $n, n \in \mathbb{N}: a^{n} = e$
+
 ### Изоморфизм
 $G = <M, \circ>$ изоморфна $G' = <M', *>$, если существует биекция $\varphi: G \leftrightarrow G':$
 - $a \in M, \varphi(a) = a', a' \in M'$
 - $\varphi(a \circ b) = \varphi(a) * \varphi(b)$
 
-### Циклическая группа
-Группа $G$ называется **циклической**, если $\exists a \in G: \forall b \in G \enspace \exists k \in \mathbb{Z}: b = a^{k}$
+*Обозначается* $G \cong G'$
 
+### Циклическая группа
+Группа $G$ называется **циклической**, если $\exists a \in G: \forall b \in G \enspace \exists z \in \mathbb{Z}: b = a^{z}$  
+Элемент $a$ называют <u>порождающим</u>
+
+Циклическую группу порядка $n$ обозначают $C_{n}$
+
+- Циклические группы коммутативны
+- $a$ - порождающий $C_{n} \Leftrightarrow$ порядок $a$ равен $n$
+- Если в группе $G, |G| = n$ нашелся $a \in G:$ порядок $a$ равен $n$, то $G \cong C_{n}, \enspace a$ - порождающий
 ## Cтроим группы
 ##### $G = <\set{e, a}, \circ>$
 $\circ: M \times M \to M$  
@@ -134,3 +145,34 @@ _**Таблица Кэли**_
 ###### Предположения
 1. $a \circ a = e$
     - Получилось $<\set{00, 01, 10, 11}, XOR>$
+
+## Подгруппы
+$H$ называется подгруппой $G$ (*обозначается* $H < G$), если
+- $H \subseteq G$
+- $e \in H$
+- $\forall a \in H \enspace a^{-1} \in H$
+- $\forall a, b \in H \enspace a \times b \in H$
+    - то есть $H \subseteq$ является группой относительно тех же операций
+
+### Критерий
+$H < G \Leftrightarrow \forall a, b \in H \enspace a \times b^{-1} \in H$
+- $\Rightarrow$
+    - по определению подгруппы
+- $\Leftarrow$
+    - $a \in H \Rightarrow a \times a^{-1} \in H \Rightarrow e \in H$ (1)
+    - $a, e \in H \Rightarrow e \times a^{-1} \in H \Rightarrow a^{-1} \in H$ (2)
+    - $a, b \in H \Rightarrow b^{-1} \in H \Rightarrow a \times {(b^{-1})}^{-1} \in H \Rightarrow a \times b \in H$ (3)
+
+### Левый смежный класс
+Левый смежный класс по подгруппе $H$ представителем $a$ множество $(a \in G, H < G)$  
+$aH = \set{a \times h \enspace \vert \enspace h \in H}, \enspace |aH| = |H|, \enspace hH = H, h \in H$
+
+#### Утверждение
+Левые смежные классы не пересекаются или совпадают
+- *От противного*
+    - $z \in aH, z \in bH \Rightarrow a = ah_{1} = bh_{2}, h_{1}, h_{2} \in H \Rightarrow b = c \times h_{1}h_{2}^{-1}$
+    - $\forall h \in H \enspace bh = a \times h_{1}h_{2}^{-1} \times h \in aH \Rightarrow bH \subseteq aH$
+    - аналогично $aH \subseteq bH \Rightarrow aH = bH$
+
+#### Теорема Лагранжа
+$|G| = (G \times H) |H|$, где $(G \times H)$ - индекс подгруппы
